add delivery new VC with collection view

--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
@@ -19,6 +19,11 @@
 "Actual" = "Actual";
 "Watch" = "Watch";
 
+// MARK: - storiesData
+"Pies" = "Pies";
+
+// MARK: - promotionsData
+
 // MARK: - GreetingViewController
 "Start" = "Start";
 "Welcome" = "Welcome";
