add sorry page with Lotti on DeliveryVC

--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
@@ -38,3 +38,7 @@
 "Dont Have" = "Haven't account?";
 "Registration" = "Registration";
 
+// MARK: - TMDeliveryVC
+"List" = "List";
+"On Map" = "On Map";
+"Sorry Message" = "Sorry, this page is currently under construction.";
