--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -37,3 +37,8 @@
 "Or Log In With" = "или войти с помощью:";
 "Dont Have" = "Нет аккаунта?";
 "Registration" = "Регистрация";
+
+// MARK: - TMDeliveryVC
+"List" = "Список";
+"On Map" = "На карте";
+"Sorry Message" = "Приносим извинения, эта страница сейчас находится в разработке.";
