--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -42,3 +42,6 @@
 "List" = "Список";
 "On Map" = "На карте";
 "Sorry Message" = "Приносим извинения, эта страница сейчас находится в разработке.";
+
+// MARK: - TMMoreViewController
+"About Chef" = "О кондитере";
