--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -55,3 +55,21 @@
 
 // MARK: - AKCreateCustomOrder
 "Сreate an order" = "Создать заказ";
+
+// MARK: - TMMainMenuViewController
+"Honey Cake" = "Медовик";
+"Red velvet" = "Красный Бархат";
+"Strawberry pie" = "Клубничный пирог";
+"Condensed milk rolls" = "Трубочки со сгущёнкой";
+"Pear pie" = "Грушевый пирог";
+"Choco Balls" = "Шоколадные шары с какао";
+"Napoleon" = "Торт Наполеон";
+
+"Honey Cake Description" = "Торт по уникальным рецептурам прошлого столетия из натуральных ингредиентов.";
+"Red Velvet Description" = "«Красный бархат» – торт, который запоминается своим ярким красным оттенком, нежным кремом и воздушными, очень пористыми коржами.";
+"Strawberry pie Description" = "Вы влюбитесь в этот ароматный, вкусный пирог с клубничным вкусом!";
+"Condensed rolls Description" = "Очень вкусные хрустящие трубочки из натуральных ингредиентов.";
+"Pear pie Description" = "В кулинарии груши используют очень широко, но самый вкусный вариант – грушевый пирог.";
+"Choco Balls Description" = "Берёте широкую чашку, готовите горячее молоко, заливаете им шоколадные-шар и смотрите с нетерпением, когда уже зефирки вырвутся на свободу.";
+"Cupcakes Description" = "Шоколадные капкейки со сливочным кремом никого не оставят равнодушным! ";
+"Napoleon Description" = "Вкусный, нежный, слоёный домашний торт Наполеон. ";
