create separate file for project custom colors

--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
@@ -18,6 +18,9 @@
 "Discounts" = "Discounts";
 "Actual" = "Actual";
 "Watch" = "Watch";
+"For all the pies" = "For all the pies";
+"For every 5th cake" = "For every 5th cake";
+"All May" = "All May";
 
 // MARK: - storiesData
 "Merengue" = "Merengue roll";
