--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -18,6 +18,9 @@
 "Discounts" = "Акции";
 "Actual" = "Актуальное";
 "Watch" = "Посмотреть";
+"For all the pies" = "На все пироги";
+"For every 5th cake" = "На каждый 5-й торт";
+"All May" = "Весь Май";
 
 // MARK: - storiesData
 "Merengue" = "Меренговый рулет";
