add closure in cell in Actual part

--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
@@ -91,4 +91,15 @@
 
 // MARK: - Other
 "Page under construction" = "This page is under construction";
-
+"Back" = "Back";
+"Register now" = "Register now";
+"Other. I'll write in a comment." = "Other. I'll write in a comment.";
+"For colleagues" = "For colleagues";
+"For the anniversary" = "For the anniversary";
+"Without harm to the figure" = "Without harm to the figure";
+"For a child" = "For a child";
+"For the wedding" = "For the wedding";
+"Nuts with condensed milk" = "Nuts with condensed milk";
+"Done" = "Done!";
+"The order has been sent. We will contact you shortly!" = "The order has been sent. We will contact you shortly!";
+"More details" = "More details";
