--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -91,3 +91,14 @@
 
 // MARK: - Other
 "Page under construction" = "Страница находится в разработке";
+"Back" = "Вернуться";
+"Register now" = "Зарегистрироваться";
+"Other. I'll write in a comment." = "Другое. Напишу в комментарий.";
+"For colleagues" = "Для коллег";
+"For the anniversary" = "На юбилей";
+"Without harm to the figure" = "Без вреда для фигуры";
+"For a child" = "Для ребёнка";
+"For the wedding" = "На свадьбу";
+"Nuts with condensed milk" = "Орешки со сгущёнкой";
+"Done" = "Готово!";
+"More details" = "Подробнее";
