--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/en.lproj/Localizable.strings
@@ -101,5 +101,9 @@
 "For the wedding" = "For the wedding";
 "Nuts with condensed milk" = "Nuts with condensed milk";
 "Done" = "Done!";
+"More details" = "More details";
 "The order has been sent. We will contact you shortly!" = "The order has been sent. We will contact you shortly!";
 "More details" = "More details";
+"Weight" = "Weight";
+"Add to Shopping Cart" = "Add to Shopping Cart";
+"g." = "g.";
