--- a/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
+++ b/TortyMozyrApp/TortyMozyrApp/Resources/Localization/ru.lproj/Localizable.strings
@@ -102,3 +102,7 @@
 "Nuts with condensed milk" = "Орешки со сгущёнкой";
 "Done" = "Готово!";
 "More details" = "Подробнее";
+"The order has been sent. We will contact you shortly!" = "Заказ отправлен. Мы свяжемся с вами в ближайшее время.";
+"Weight" = "Вес";
+"Add to Shopping Cart" = "Добавить в корзину";
+"g." = "гр.";
